# haskell-book-exercises

./: README.md  index.adoc  index.html
ch01/: ch01.adoc
ch02/: ch02.adoc  ch02_2.12_1.hs  ch02_2.12_2.hs  ch02_2.12_3.hs  ch02_2.6_1.hs
ch03/: ch03.adoc  ch03_3.3_0.hs  ch03_3.3_1.hs  ch03_3.7_1.hs  ch03_3.7_2.hs  ch03_3.7_2_1.hs  ch03_3.7_3.hs
ch04/: ch04.adoc  ch04_4.2_0.hs  ch04_4.7_0.hs  ch04_4.7_1.hs  ch04_4.7_2.hs  ch04_4.7_3.hs
ch05/: ch05.adoc  ch05_5.9_0.hs  ch05_5.9_1.hs  ch05_5.9_2.hs  ch05_5.9_3.hs  ch05_5.9_4.hs  ch05_5.9_5.hs  ch05_5.9_6.hs  ch05_5.9_7.hs
ch06/: ch06.adoc  ch06_6.12_0.hs  ch06_6.12_0_1.hs  ch06_6.12_0_2.hs  ch06_6.12_0_3.hs  ch06_6.12_0_4.hs  ch06_6.12_0_5.hs  ch06_6.12_0_6.hs  ch06_6.12_1.hs  ch06_6.12_2.hs  ch06_6.12_3.hs  ch06_6.12_4.hs  ch06_6.14_0.hs  ch06_6.14_1.hs
ch07/: ch07.adoc  ch07_7.10_0.hs  ch07_7.12_0.hs  ch07_7.12_1.hs  ch07_7.12_2.hs  ch07_7.12_3.hs  ch07_7.12_4.hs  ch07_7.12_5.hs  ch07_7.12_6.hs  ch07_7.12_7.hs  ch07_7.4_0.hs  ch07_7.6_0.hs  ch07_7.6_1.hs  ch07_7.7_0.hs  ch07_7.8_0.hs  ch07_7.8_0_1.hs  ch07_7.8_1.hs
ch08/: ch08.adoc  ch08_8.6_0.hs  ch08_8.6_1.hs  ch08_8.6_2.hs  ch08_8.6_3.hs  ch08_8.6_4.hs  ch08_8.6_5.hs  ch08_8.6_5_1.hs  ch08_8.6_6.hs  ch08_8.6_7.hs
ch09/: ch09.adoc  ch09_9.11_0.hs  ch09_9.11_1.hs  ch09_9.12_0.hs  ch09_9.12_1.hs  ch09_9.12_10.hs  ch09_9.12_11.hs  ch09_9.12_12.hs  ch09_9.12_2.hs  ch09_9.12_3.hs  ch09_9.12_4.hs  ch09_9.12_5.hs  ch09_9.12_6.hs  (+15 more)
ch13/hangman/: hangman.cabal  stack.yaml
ch13/hangman/app/: Main.hs
ch13/hangman/src/: Main.hs
ch13/hangman/test/: Spec.hs
(+244 files in other folders)
